src/objects/Train_Station__c.object
<CustomObject>
    <fields>
        <fullName>Borough__c</fullName>
        <label>Borough</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barking and Dagenham</fullName>
                </value>
                <value>
                    <fullName>Barnet</fullName>
                </value>
                <value>
                    <fullName>Bexley</fullName>
                </value>
                <value>
                    <fullName>Brent</fullName>
                </value>
                <value>
                    <fullName>Brentwood</fullName>
                </value>
                <value>
                    <fullName>Bromley</fullName>
                </value>
                <value>
                    <fullName>Broxbourne</fullName>
                </value>
                <value>
                    <fullName>Camden</fullName>
                </value>
                <value>
                    <fullName>Chiltern</fullName>
                </value>
                <value>
                    <fullName>City of London</fullName>
                </value>
                <value>
                    <fullName>Croydon</fullName>
                </value>
                <value>
                    <fullName>Dartford</fullName>
                </value>
                <value>
                    <fullName>Ealing</fullName>
                </value>
                <value>
                    <fullName>Elmbridge</fullName>
                </value>
                <value>
                    <fullName>Enfield</fullName>
                </value>
                <value>
                    <fullName>Epsom and Ewell</fullName>
                </value>
                <value>
                    <fullName>Greenwich</fullName>
                </value>
                <value>
                    <fullName>Hackney</fullName>
                </value>
                <value>
                    <fullName>Hammersmith and Fulham</fullName>
                </value>
                <value>
                    <fullName>Haringey</fullName>
                </value>
                <value>
                    <fullName>Harrow</fullName>
                </value>
                <value>
                    <fullName>Havering</fullName>
                </value>
                <value>
                    <fullName>Hertsmere</fullName>
                </value>
                <value>
                    <fullName>Hillingdon</fullName>
                </value>
                <value>
                    <fullName>Hounslow</fullName>
                </value>
                <value>
                    <fullName>Islington</fullName>
                </value>
                <value>
                    <fullName>Kensington and Chelsea</fullName>
                </value>
                <value>
                    <fullName>Kingston upon Thames</fullName>
                </value>
                <value>
                    <fullName>Lambeth</fullName>
                </value>
                <value>
                    <fullName>Lewisham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bath</fullName>
                </value>
                <value>
                    <fullName>Bolton</fullName>
                </value>
                <value>
                    <fullName>Bristol</fullName>
                </value>
                <value>
                    <fullName>Cambridgeshire</fullName>
                </value>
                <value>
                    <fullName>Cumbria</fullName>
                </value>
                <value>
                    <fullName>Dorset</fullName>
                </value>
                <value>
                    <fullName>East Sussex</fullName>
                </value>
                <value>
                    <fullName>Hertfordshire</fullName>
                </value>
                <value>
                    <fullName>Lancashire</fullName>
                </value>
                <value>
                    <fullName>South East London</fullName>
                </value>
                <value>
                    <fullName>Surrey</fullName>
                </value>
                <value>
                    <fullName>West Midlands</fullName>
                </value>
                <value>
                    <fullName>Yorkshire</fullName>
                </value>
                <value>
                    <fullName>Wales</fullName>
                </value>
                <value>
                    <fullName>Cheshire</fullName>
                </value>
                <value>
                    <fullName>Essex</fullName>
                </value>
                <value>
                    <fullName>Kent</fullName>
                </value>
                <value>
                    <fullName>Warwickshire</fullName>
                </value>
                <value>
                    <fullName>Derby</fullName>
                </value>
                <value>
                    <fullName>County Durham</fullName>
                </value>
                <value>
                    <fullName>Worcestershire</fullName>
                </value>
                <value>
                    <fullName>North East london</fullName>
                </value>
                <value>
                    <fullName>North West London</fullName>
                </value>
                <value>
                    <fullName>Devon</fullName>
                </value>
                <value>
                    <fullName>Gloucestershire</fullName>
                </value>
                <value>
                    <fullName>Buckinghamshire</fullName>
                </value>
                <value>
                    <fullName>Herefordshire</fullName>
                </value>
                <value>
                    <fullName>Suffolk</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
                <value>
                    <fullName>Leicestershire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_By__c</fullName>
        <label>Managed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>c2c</fullName>
                </value>
                <value>
                    <fullName>Chiltern Railways</fullName>
                </value>
                <value>
                    <fullName>First Capital Connect</fullName>
                </value>
                <value>
                    <fullName>First Great Western</fullName>
                </value>
                <value>
                    <fullName>Greater Anglia</fullName>
                </value>
                <value>
                    <fullName>Heathrow Express</fullName>
                </value>
                <value>
                    <fullName>London Midland</fullName>
                </value>
                <value>
                    <fullName>London Overground</fullName>
                </value>
                <value>
                    <fullName>London Underground</fullName>
                </value>
                <value>
                    <fullName>Network Rail</fullName>
                </value>
                <value>
                    <fullName>Network Rail/Eurostar</fullName>
                </value>
                <value>
                    <fullName>Southeastern</fullName>
                </value>
                <value>
                    <fullName>Southern</fullName>
                </value>
                <value>
                    <fullName>South West Trains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Station_Code__c</fullName>
        <label>Station Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Station_Post_Code__c</fullName>
        <label>Station Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Train Station</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>County__c</columns>
        <columns>Borough__c</columns>
        <columns>Station_Post_Code__c</columns>
        <columns>Station_Code__c</columns>
        <columns>Managed_By__c</columns>
        <columns>Zone__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Train Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Train Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>